# ChangeLog for dev-libs/libpcre
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.161 2009/10/19 15:47:13 loki_val Exp $

*libpcre-8.00 (19 Oct 2009)

  19 Oct 2009; Peter Alfredsen <loki_val@gentoo.org> +libpcre-8.00.ebuild:
  Add 8.00. No keywords until I have tested it doesn't break stuff randomly.

  17 Oct 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
  remove static-libs description as it is global now

  11 Sep 2009; Peter Alfredsen <loki_val@gentoo.org> libpcre-7.9-r1.ebuild:
  Add deps for bzip2 and zlib. Bug 284638.

  19 Jun 2009; Brent Baude <ranger@gentoo.org> libpcre-7.9-r1.ebuild:
  stable ppc64, bug 273037

  11 Jun 2009; Markus Meier <maekke@gentoo.org> libpcre-7.9-r1.ebuild:
  amd64 stable, bug #272977

  11 Jun 2009; Raúl Porcel <armin76@gentoo.org> libpcre-7.9-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #272977

  09 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  libpcre-7.9-r1.ebuild:
  stable x86, bug 272977

  08 Jun 2009; Ferris McCormick <fmccor@gentoo.org> libpcre-7.9-r1.ebuild:
  Sparc stable, Bug #272977.

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> libpcre-7.9-r1.ebuild:
  Stable for HPPA (bug #272977).

  07 Jun 2009; nixnut <nixnut@gentoo.org> libpcre-7.9-r1.ebuild:
  ppc stable #272977

  18 May 2009; Peter Alfredsen <loki_val@gentoo.org> libpcre-7.8-r2.ebuild,
  libpcre-7.9-r1.ebuild, metadata.xml:
  Add IUSE=static-libs now that council has approved.

*libpcre-7.9-r1 (18 Apr 2009)
*libpcre-7.8-r2 (18 Apr 2009)

  18 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  -files/libpcre-7.7-buffer-overflow.patch,
  +files/libpcre-7.9-pkg-config.patch, -libpcre-7.8-r1.ebuild,
  +libpcre-7.8-r2.ebuild, -libpcre-7.9.ebuild, +libpcre-7.9-r1.ebuild:
  Provide static libraries per bug 266016. Provide pkg-config file to link
  statically against libpcreposix as replacement for .la files. Remove old
  patch file.
