@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/Attic/libpcre-8.00.ebuild,v 1.1 2009/10/19 15:47:13 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/Attic/libpcre-8.00.ebuild,v 1.2 2009/10/20 23:02:51 loki_val Exp $
 
 EAPI=2
 
@@ -18,8 +18,7 @@ else
 fi
 LICENSE="BSD"
 SLOT="3"
-#KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
-KEYWORDS=""
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
 IUSE="bzip2 +cxx unicode zlib static-libs"
 
 RDEPEND="bzip2? ( app-arch/bzip2 )
