@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libpcre
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.161 2009/10/19 15:47:13 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libpcre/ChangeLog,v 1.162 2009/10/20 23:02:51 loki_val Exp $
+
+  20 Oct 2009; Peter Alfredsen <loki_val@gentoo.org> libpcre-8.00.ebuild:
+  Re-add keywords.
 
 *libpcre-8.00 (19 Oct 2009)
 
